# learn-web-rust

./: .gitignore  Dockerfile  README.md  build.sh  run.sh
workspace/: run-local.sh
workspace/server/: Cargo.toml
workspace/server/src/: main.rs
workspace/server/static/: .gitignore  index.html  styles.css
workspace/tdv_client/: Cargo.toml
workspace/tdv_client/examples/: grid.rs  scatter.rs
workspace/tdv_client/src/: lib.rs
workspace/tdv_msg/: Cargo.toml
workspace/tdv_msg/src/: grid.rs  lib.rs
workspace/tdv_server/: Cargo.toml
workspace/tdv_server/src/: main.rs
workspace/tdv_server/static/: .gitignore  index.html  styles.css
workspace/tdv_ui/: Cargo.toml  Web.toml
workspace/tdv_ui/src/: grid.rs  lib.rs  main.rs  msg.rs  plot.rs
workspace/ui/: Cargo.toml
workspace/ui/src/: lib.rs  main.rs  msg.rs
workspace/wdview_msg/: Cargo.toml
workspace/wdview_msg/src/: lib.rs
