[package]
name = "server"
version = "0.1.0"
authors = ["root"]

[dependencies]
bincode = "1.0.1"
sled = "0.15.17"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde = "1.0.70"
tempdir = "0.3.7"
failure = "0.1"
tungstenite = "0.5.2"
yew = { git = "https://github.com/DenisKolodin/yew.git", branch = "master" }
ui = { path = "../ui" }
wdview_msg = { path = "../wdview_msg" }

[dependencies.maud]
branch = "master"
features = ["rocket"]
git = "https://github.com/lfairy/maud.git"
